--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* Urbanist font from Google */
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100;300;400;700;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100;300;400;700;900&display=swap'); */
 
 /* Variables */
 :root {
@@ -11,4 +11,248 @@
     --white: #FFFFFF;
 
     --font: 'Urbanist', sans-serif;
+}
+
+/* GLOBAL STYLES */
+* {
+    box-sizing: border-box;
+    font-family: var(--font);
+}
+
+html {
+    font-size: 62.5%;
+}
+body {
+    /* For texts that are not paragraphs */
+    font-size: 1.8rem;
+    color: var(--accent);
+}
+img {
+    max-width: 100%;
+}
+h1 {font-size: 3.6rem;}
+h2 {font-size: 3rem;}
+h3 {font-size: 2.4rem;}
+p {font-size: 1.6rem;}
+h1, h2, h3, h4 {
+    /* Center the headings */
+    text-align: center;
+}
+.container {
+    width: 90%;
+    max-width: 120rem;
+    margin: 0 auto;
+}
+.text-center {
+    text-align: center;
+}
+.normal-section {
+    margin-top: 5rem;
+    padding: 2rem 0;
+}
+/* For header and footer */
+.primary-background {
+    background-color: var(--accent);
+}
+.primary-background p, .primary-background h1, .primary-background h2, .primary-background h3, .primary-background h4, .primary-background a, .primary-background ul li a {
+    color: var(--white);
+}
+.primary-background .bar {
+    background-color: var(--white);
+}
+.primary-background hr {
+    border-color: var(--white);
+}
+
+/*============ Home Styles ===========*/
+
+/* Hero */
+.hero-image-container {
+    max-height: 70vh;
+    overflow: hidden;
+}
+.hero-image-container img {
+    height: 100%;
+}
+
+/*--- HEADER ---*/
+header {
+    padding: 1rem 0;
+    margin-top: -10px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+header .logo-container a h1{
+    margin: .5rem 0;
+}
+header .logo-container a, .navigation li a {
+    text-decoration: none;
+    color: var(--accent);
+    width: 100%;
+    text-align: center;
+}
+.navigation ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.navigation ul li{
+    text-align: center;
+    padding: .5rem 0;
+}
+.navigation #menu.hide {
+    display: none;
+}
+/*--- MENU TOGGLER ---*/
+.toggle-menu-icon {
+    width: 2.8rem;
+    padding: 1rem 0;
+    margin: 0 auto;
+}
+.toggle-menu-icon .bar1,
+.toggle-menu-icon .bar2,
+.toggle-menu-icon .bar3 {
+    display: block;
+    height: 2px;
+    width: 100%;
+    margin-bottom: .7rem;
+    transition: all 550ms cubic-bezier(0.62, -0.99, 0.54, 1.9) 0s;
+}
+.toggle-menu-icon .bar2 {
+    transform-origin: right;
+}
+.toggle-menu-icon .bar3 {
+    margin-bottom: 0;
+}
+    /* When its opened I switch it by a cross */
+.opened .bar1 {transform: translateY(9px) rotate(45deg);}
+.opened .bar2 {transform: scale(0);}
+.opened .bar3 {transform: translateY(-9px) rotate(-45deg);}
+
+/* START HOME MAIN CONTENT */
+.first-message {
+    font-weight: 700;
+    padding: 2rem;
+    background-color: var(--secondary);
+}
+.local-business {
+    background-color: var(--accent);
+    color: var(--white);
+}
+.business h3 {
+    text-align: start;
+}
+.business .site-link {
+    font-weight: 700;
+    text-align: center;
+    display: block;
+    color: var(--white);
+}
+.business hr {
+    border: 1px solid var(--white);
+}
+
+/* Call to action section */
+.call-to-action-section {
+    background-color: var(--secondary);
+    color: var(--black);
+}
+
+.call-to-action-section .cta-btn {
+    padding: 3rem;
+    text-decoration: none;
+    color: var(--white);
+    font-size: 3.6rem;
+    text-transform: uppercase;
+    text-align: center;
+    display: block;
+    background-image: url('../images/callToAction.jpg');
+    background-size: cover;
+    background-position: center center;
+}
+
+/* Events section */
+.event h3{
+    text-align: start;
+    margin-bottom: 0;
+}
+.event span {
+    font-weight: 700;
+}
+.event a {
+    color: var(--accent);
+}
+/* Weather section */
+.today-weather {
+    padding: 2rem 0;
+}
+.today-weather,
+#forecastContainer .one-day {
+    background-color: var(--primary);
+}
+.today-weather h3{    
+    margin-bottom: 0;
+}
+.today-weather img {
+    display: block;
+    margin: 0 auto;
+}
+.today-weather p {
+    text-align: center;
+    font-size: 2.4rem;
+}
+/* Forecast section */
+#forecastContainer {
+    margin: 0 auto;
+}
+#forecastContainer .one-day{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 6rem;
+    width: 100%;
+    border-bottom: 1px solid var(--accent);
+}
+#forecastContainer .one-day:last-of-type {
+    border: none;
+}
+
+/*============== FOOTER ==============*/
+footer {
+    padding: 4rem 0;
+    text-align: center;
+    margin-top: 5rem;
+}
+footer hr {
+    border: 1px solid var(--accent);
+    margin-top: 0;
+}
+.footer-section {
+    margin-bottom: 2rem;
+}
+.footer-section h3 {
+    margin-bottom: .2rem;
+}
+.footer-section a {
+    text-decoration: none;
+    display: block;
+    padding: .5rem 0;
+}
+.social-icons-cont {
+    margin-top: 5rem;
+}
+.social-icons-ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2rem;
+}
+.social-icons-ul img {
+    width: 3rem;
 }
